playing around with gatk and cosmic merging, about to erase scratch work

--- a/notebooks/1_1_variant_detection_reference_building.ipynb
+++ b/notebooks/1_1_variant_detection_reference_building.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,6 +41,7 @@
     "\n",
     "# vk build\n",
     "cosmic_version = 100  # COSMIC version for gget cosmic\n",
+    "insertion_size_limit = None\n",
     "# os.environ['COSMIC_EMAIL'] = 'your_email'  # to avoid being prompted for email in varseek build\n",
     "# os.environ['COSMIC_PASSWORD'] = 'your_password'  # to avoid being prompted for password in varseek build\n",
     "\n",
@@ -95,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,15 +124,16 @@
     "mutation_metadata_df_out_path_vk_info = os.path.join(out_dir_notebook, \"mutation_metadata_df_updated_vk_info.csv\")\n",
     "mutation_index = f\"{out_dir_notebook}/mutation_reference.idx\"\n",
     "dlist_fasta = f\"{out_dir_notebook}/dlist.fa\"\n",
+    "wt_mcrs_index = f\"{out_dir_notebook}/wt_mcrs_reference.idx\"\n",
+    "\n",
     "\n",
     "mcrs_fasta_vk_filter = os.path.join(out_dir_notebook, \"mcrs_filtered.fa\")\n",
     "output_metadata_df_vk_filter = os.path.join(out_dir_notebook, \"mutation_metadata_df_filtered.csv\")\n",
     "dlist_fasta_vk_filter = os.path.join(out_dir_notebook, \"dlist_filtered.fa\")\n",
+    "wt_mcrs_fa_vk_filter = os.path.join(out_dir_notebook, \"mcrs_wt_filtered.fa\")\n",
     "t2g_vk_filter = os.path.join(out_dir_notebook, \"t2g_filtered.txt\")\n",
-    "id_to_header_csv_vk_filter = os.path.join(out_dir_notebook, \"id_to_header_mapping_filtered.csv\")\n",
-    "wt_mcrs_index = os.path.join(out_dir_notebook, \"wt_mcrs_reference.idx\")\n",
-    "wt_mcrs_fasta_vk_filter = os.path.join(out_dir_notebook, \"wt_mcrs_filtered.fa\")\n",
     "t2g_wt_vk_filter = os.path.join(out_dir_notebook, \"t2g_wt_filtered.txt\")\n",
+    "id_to_header_csv_vk_filter = os.path.join(out_dir_notebook, \"id_to_header_mapping_filtered.csv\")\n",
     "\n",
     "if dlist:\n",
     "    dlist_kb_argument = dlist_fasta_vk_filter\n",
@@ -159,6 +161,8 @@
     "    out=out_dir_notebook,\n",
     "    reference_out=reference_out_dir,\n",
     "    w=w,\n",
+    "    k=k,\n",
+    "    insertion_size_limit=insertion_size_limit,\n",
     "    remove_seqs_with_wt_kmers=True,\n",
     "    optimize_flanking_regions=True,\n",
     "    min_seq_len=k,\n",
@@ -237,10 +241,10 @@
     "# %%time\n",
     "vk.filter(mutation_metadata_df_path = mutation_metadata_df_out_path_vk_info,\n",
     "          output_mcrs_fasta=mcrs_fasta_vk_filter,\n",
-    "          output_wt_mcrs_fa=wt_mcrs_fasta_vk_filter,\n",
     "          output_metadata_df=output_metadata_df_vk_filter,\n",
     "          dlist_fasta=dlist_fasta,\n",
     "          output_dlist_fasta=dlist_fasta_vk_filter,\n",
+    "          output_wt_mcrs_fa=wt_mcrs_fa_vk_filter,\n",
     "          create_t2g=True,\n",
     "          output_t2g=t2g_vk_filter,\n",
     "          output_t2g_wt=t2g_wt_vk_filter,\n",
@@ -248,9 +252,7 @@
     "          output_id_to_header_csv=id_to_header_csv_vk_filter,\n",
     "          verbose=True,\n",
     "          return_df=False,\n",
-    "          filters = fasta_filters)\n",
-    "\n",
-    "\n"
+    "          filters = fasta_filters)"
    ]
   },
   {
@@ -269,6 +271,10 @@
     "# %%time\n",
     "if not os.path.exists(mutation_index):\n",
     "    kb_ref_command = [\"kb\", \"ref\", \"--workflow\", \"custom\", \"-t\", str(threads), \"-i\", mutation_index, \"--d-list\", dlist_kb_argument, \"-k\", str(k), mcrs_fasta_vk_filter]\n",
+    "    subprocess.run(kb_ref_command, check=True)\n",
+    "\n",
+    "if not os.path.exists(wt_mcrs_index) and os.path.exists(wt_mcrs_fa_vk_filter):\n",
+    "    kb_ref_command = [\"kb\", \"ref\", \"--workflow\", \"custom\", \"-t\", str(threads), \"-i\", wt_mcrs_index, \"--d-list\", \"None\", \"-k\", str(k), wt_mcrs_fa_vk_filter]\n",
     "    subprocess.run(kb_ref_command, check=True)"
    ]
   },
@@ -291,25 +297,6 @@
     "# if not os.path.exists(mutation_index_31):\n",
     "#     kb_ref_command = [\"kb\", \"ref\", \"--workflow\", \"custom\", \"-t\", str(16), \"-i\", mutation_index_31, \"--d-list\", dlist_kb_argument, \"-k\", str(31), mcrs_fasta_vk_filter]\n",
     "#     subprocess.run(kb_ref_command, check=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Sam but for wt mcrs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# %%time\n",
-    "if not os.path.exists(wt_mcrs_index) and os.path.exists(wt_mcrs_fasta_vk_filter):\n",
-    "    kb_ref_command = [\"kb\", \"ref\", \"--workflow\", \"custom\", \"-t\", str(threads), \"-i\", wt_mcrs_index, \"--d-list\", \"None\", \"-k\", str(k), wt_mcrs_fasta_vk_filter]\n",
-    "    subprocess.run(kb_ref_command, check=True)"
    ]
   },
   {
@@ -358,22 +345,6 @@
     "\n",
     "#     kb_ref_standard_command = f\"kb ref -k {k_standard} -i {standard_index} -g {standard_t2g} -f1 {standard_f1} -t {threads} {t2t_genome} {t2t_gtf}\"\n",
     "#     result = subprocess.run(kb_ref_standard_command, shell=True, check=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#!! TEMP - testing ccle issues\n",
-    "# standard_index = \"/home/jrich/data/varseek_data/reference/T2T/GCF_009914755.1/kb_index/index.idx\"\n",
-    "# standard_t2g = \"/home/jrich/data/varseek_data/reference/T2T/GCF_009914755.1/kb_index/t2g.txt\"\n",
-    "# k_standard = 31\n",
-    "# threads_per_task = 16\n",
-    "# kb_count_out_standard_index = f\"/home/jrich/Desktop/varseek/kb_count_standard_index_TEMP\"\n",
-    "# fastq_files = \"\"\n",
-    "# [\"kb\", \"count\", \"-t\", str(threads_per_task), \"-k\", str(k_standard), \"-i\", standard_index, \"-g\", standard_t2g, \"-x\", \"bulk\", \"--num\", \"--h5ad\", \"--parity\", \"paired\", \"-o\", kb_count_out_standard_index] + fastq_files"
    ]
   }
  ],
