--- a/notebooks/1_2_variant_detection_sample_alignment.ipynb
+++ b/notebooks/1_2_variant_detection_sample_alignment.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,30 +73,31 @@
     "\n",
     "# Paths\n",
     "out_dir_base = \"/home/jrich/data/varseek_data_fresh\"\n",
+    "reference_out_dir = os.path.join(out_dir_base, \"reference\")\n",
+    "out_dir_notebook = f\"{out_dir_base}/alignment_output\"\n",
+    "index_dir = os.path.join(out_dir_base, \"vk_build_pipeline_t2t\")\n",
     "rnaseq_fastq_files = \"\"  # pass as a single string or as a list of strings (if paired-end, then pass each pair sequentially with R1 preceding R2)\n",
     "seqtk=\"seqtk\"\n",
     "mutation_metadata_df_path = None  #!!! replace\n",
-    "wt_mcrs_index = \"\"\n",
-    "wt_mcrs_t2g = \"\"\n",
+    "mutation_index = f\"{index_dir}/mutation_reference.idx\"\n",
+    "t2g_vk_filter = os.path.join(index_dir, \"t2g_filtered.txt\")\n",
+    "wt_mcrs_index = mutation_index = f\"{index_dir}/wt_mcrs_reference.idx\"\n",
+    "wt_mcrs_t2g = os.path.join(out_dir_notebook, \"t2g_wt_filtered.txt\")\n",
     "standard_index = \"\"\n",
     "standard_t2g = \"\"\n",
     "standard_genome = \"\"  #!!! can use gget ref\n",
-    "standard_gtf = \"\"  #!!! can use gget ref\n"
+    "standard_gtf = \"\"  #!!! can use gget ref"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "out_dir_notebook = os.path.join(out_dir_base, \"vk_build_pipeline_t2t\")\n",
-    "reference_out_dir = os.path.join(out_dir_base, \"reference\")\n",
-    "mutation_index = f\"{out_dir_notebook}/mutation_reference.idx\"\n",
     "kb_count_out = f\"{out_dir_notebook}/kb_count_out\"\n",
     "kb_count_out_wt_mcrs = f\"{out_dir_notebook}/kb_count_out_wt_mcrs\"\n",
     "kb_count_out_standard_index = f\"{out_dir_notebook}/kb_count_out_standard\"\n",
-    "t2g_vk_filter = os.path.join(out_dir_notebook, \"t2g_filtered.txt\")\n",
     "vk_summarize_output_dir = f\"{out_dir_notebook}/vk_summarize\"\n",
     "fastqc_out_dir = f\"{out_dir_notebook}/fastqc_out\"\n",
     "\n",
