--- a/notebooks/2_variant_simulation.ipynb
+++ b/notebooks/2_variant_simulation.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,6 +37,7 @@
     "strand = None  # None for strand-agnostic (randomly-selected), \"f\" for forward, \"r\" for reverse, \"both\" for both - make sure this matches the reference genome (vk build command) - strand = True -> \"f\" or \"r\" here; strand = False -> None or \"both\" here - note that the strand is randomly selected per *transcript*, such that all drawn reads will come from the same strand no matter what\n",
     "add_noise=False\n",
     "error_rate=0\n",
+    "error_distribution=(0.85, 0.1, 0.05)\n",
     "max_errors=0\n",
     "seq_id_column=\"seq_ID\"\n",
     "mut_column=\"mutation\"\n",
@@ -187,6 +188,7 @@
     "        seed=seed,\n",
     "        add_noise=add_noise,\n",
     "        error_rate=error_rate,\n",
+    "        error_distribution=error_distribution,\n",
     "        max_errors=max_errors,\n",
     "        with_replacement=False,\n",
     "        sequences=sequences,\n",
@@ -215,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,6 +250,7 @@
     "#                     seed=seed,\n",
     "#                     add_noise=add_noise,\n",
     "#                     error_rate=error_rate,\n",
+    "#                     error_distribution=error_distribution,\n",
     "#                     max_errors=max_errors,\n",
     "#                     with_replacement=False,\n",
     "#                     filters=condition_added_list,\n",
@@ -274,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,8 +288,9 @@
     "# number_of_random_reads_cdna = 10\n",
     "# number_of_random_reads_genome = 10\n",
     "\n",
-    "# # read_df = build_random_genome_read_df(reference_fasta_file_path = reference_cdna_fasta, mutation_metadata_df = mutation_metadata_df, read_df = read_df, n = number_of_random_reads_cdna, read_length = read_length, input_type = \"transcriptome\", strand = None)\n",
-    "# # read_df = build_random_genome_read_df(reference_fasta_file_path = reference_genome_fasta, mutation_metadata_df = mutation_metadata_df, read_df = read_df, n = number_of_random_reads_genome, read_length = read_length, input_type = \"genome\", strand = None)"
+    "# read_df = build_random_genome_read_df(reference_fasta_file_path = sequences, mutation_metadata_df = mutation_metadata_df, read_df = read_df, n = number_of_random_reads_cdna, read_length = read_length, input_type = \"transcriptome\", strand = strand)\n",
+    "# read_df = build_random_genome_read_df(reference_fasta_file_path = reference_genome_fasta, mutation_metadata_df = mutation_metadata_df, read_df = read_df, n = number_of_random_reads_genome, read_length = read_length, input_type = \"genome\", strand = None)\n",
+    "# read_df.to_csv(read_df_out, index=False)"
    ]
   },
   {
@@ -506,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -545,7 +549,7 @@
     "\n",
     "unique_mcrs_df = unique_mcrs_df[mutation_metadata_df_original_column_order]\n",
     "\n",
-    "unique_mcrs_df['tumor_purity'] = unique_mcrs_df['number_of_reads_mutant'] / unique_mcrs_df['number_of_reads_wt']\n",
+    "unique_mcrs_df['tumor_purity'] = unique_mcrs_df['number_of_reads_mutant'] / (unique_mcrs_df['number_of_reads_wt'] + unique_mcrs_df['number_of_reads_mutant'])\n",
     "\n",
     "unique_mcrs_df['tumor_purity'] = np.where(\n",
     "    np.isnan(unique_mcrs_df['tumor_purity']), \n",
