--- a/notebooks/2_variant_simulation_complex_fastq_old.ipynb
+++ b/notebooks/2_variant_simulation_complex_fastq_old.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,27 +20,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "out_dir_notebook=\"/home/jrich/data/varseek_data_fresh/vk_sim_2024nov24_complex_testing_3\" #!!! change for each run\n",
+    "out_dir_notebook=\"/home/jrich/data/varseek_data_fresh/vk_sim_2024nov24_complex_testing_2\" #!!! change for each run\n",
+    "\n",
     "# Paths\n",
     "mutation_metadata_df = \"/home/jrich/data/varseek_data_fresh/vk_build_pipeline_grch37_nov16/mutation_metadata_df_updated_vk_info_exploded.csv\"\n",
     "mutation_index = \"/home/jrich/data/varseek_data_fresh/vk_build_pipeline_grch37_nov16/mutation_reference.idx\"\n",
     "mutation_t2g = \"/home/jrich/data/varseek_data_fresh/vk_build_pipeline_grch37_nov16/t2g_filtered.txt\"\n",
     "\n",
     "\n",
-    "number_of_mutations_to_sample = None\n",
+    "\n",
     "read_length = 150\n",
     "strand = None  # None for strand-agnostic (randomly-selected), \"f\" for forward, \"r\" for reverse, \"both\" for both - make sure this matches the reference genome (vk build command) - strand = True -> \"f\" or \"r\" here; strand = False -> None or \"both\" here - note that the strand is randomly selected per *transcript*, such that all drawn reads will come from the same strand no matter what\n",
     "add_noise=False\n",
     "error_rate=0\n",
-    "error_distribution=(0.85, 0.1, 0.05)\n",
     "max_errors=0\n",
     "seq_id_column=\"seq_ID\"\n",
     "mut_column=\"mutation\"\n",
-    "threads = 32\n",
+    "threads = 16\n",
     "check_reason_for_read_fn = False\n",
     "\n",
     "k = 59  # w=54 - even if I will use k=59 in my experiments, my synthetic data is designed so that w=(read_length-1), meaning that the mutation can be anywhere on the read from the first to the last nucleotide, and thus I cannot catch these edge mutations if k > (w+1) - if I want to run where k > w+1, then adjust w internal to vk sim accoringly\n",
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
     "# mutation_metadata_df_path = mutation_metadata_df\n",
     "# mutation_metadata_df = pd.read_csv(mutation_metadata_df_path)\n",
     "\n",
-    "# sim_data_df_path = \"/home/jrich/data/varseek_data_fresh/vk_sim_2024nov24_temp2/vk_build/sim_data_df.csv\"\n",
+    "# sim_data_df_path = \"/home/jrich/data/varseek_data_fresh/old/vk_sim_2024nov24_temp2/vk_build/sim_data_df.csv\"\n",
     "# sim_data_df = pd.read_csv(sim_data_df_path, usecols=[\"header\", \"mutant_sequence\", \"wt_sequence\"])\n",
     "\n",
     "# sim_data_df.rename(\n",
@@ -143,67 +143,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import sys\n",
-    "# import importlib\n",
+    "import sys\n",
+    "import importlib\n",
     "\n",
-    "# # Remove the module from sys.modules\n",
-    "# if 'varseek.sim' in sys.modules:\n",
-    "#     del sys.modules['varseek.sim']\n",
+    "# Remove the module from sys.modules\n",
+    "if 'varseek.sim' in sys.modules:\n",
+    "    del sys.modules['varseek.sim']\n",
     "\n",
-    "# # Import the module and reload it\n",
-    "# import varseek.varseek_sim\n",
-    "# importlib.reload(varseek.varseek_sim)\n",
-    "# import varseek as vk\n",
+    "# Import the module and reload it\n",
+    "import varseek.varseek_sim\n",
+    "importlib.reload(varseek.varseek_sim)\n",
+    "import varseek as vk\n",
     "\n",
-    "# # instead of using vk.sim() as before, I must explicitely use vk.varseek_sim.sim()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# #!!! TEMP\n",
-    "# sample_type = \"all\"\n",
-    "# conditions = ['dlist-equal=none', 'mcrs_is_substring-isnottrue', 'pseudoaligned_to_human_reference_despite_not_truly_aligning-isnottrue']  # kmer_overlap_in_mcrs_reference-isnottrue\n",
-    "\n",
-    "\n",
-    "# if not os.path.exists(mutation_metadata_df_out) or not os.path.exists(read_df_out):\n",
-    "#     simulated_df_dict = vk.varseek_sim.sim(\n",
-    "#         mutation_metadata_df = mutation_metadata_df,\n",
-    "#         fastq_output_path = synthetic_reads_fastQ,\n",
-    "#         sample_type=sample_type,\n",
-    "#         number_of_mutations_to_sample=number_of_mutations_to_sample,\n",
-    "#         strand=strand,\n",
-    "#         number_of_reads_per_sample=\"all\",  # not used when number_of_reads_per_sample_m and number_of_reads_per_sample_w are provided\n",
-    "#         k=k,  # used in vk build with the respective index\n",
-    "#         w=w,  # used in vk build with the respective index\n",
-    "#         read_length=read_length,\n",
-    "#         seed=seed,\n",
-    "#         add_noise=add_noise,\n",
-    "#         error_rate=error_rate,\n",
-    "#         max_errors=max_errors,\n",
-    "#         with_replacement=False,\n",
-    "#         sequences=sequences,\n",
-    "#         mutation_metadata_df_path=mutation_metadata_df_path,\n",
-    "#         seq_id_column=seq_id_column,\n",
-    "#         mut_column=mut_column,\n",
-    "#         reference_out_dir=reference_out_dir,\n",
-    "#         out_dir_vk_build=out_dir_vk_build,\n",
-    "#         filters=conditions,\n",
-    "#         read_df_out=read_df_out,\n",
-    "#         mutation_metadata_df_out=mutation_metadata_df_out,\n",
-    "#     )\n",
-    "\n",
-    "#     read_df, mutation_metadata_df = simulated_df_dict[\"read_df\"], simulated_df_dict[\"mutation_metadata_df\"]\n",
-    "# else:\n",
-    "#     read_df = pd.read_csv(read_df_out)\n",
-    "#     mutation_metadata_df = pd.read_csv(mutation_metadata_df_out)"
+    "# instead of using vk.sim() as before, I must explicitely use vk.varseek_sim.sim()"
    ]
   },
   {
@@ -219,8 +175,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "m_list = [1, 2, 3, 4, 5, 6, 7, 8, 16, 32, 64, 128, 256, 512]\n",
-    "w_list = [0, 1, 2, 3, 4, 5, 6, 7, 8, 16, 32, 64, 128, 256, 512]\n",
+    "number_of_mutations_to_sample = 10\n",
+    "m_list = [1, 2, 3]\n",
+    "w_list = [0, 1, 2, 3]\n",
     "conditions = ['mutation_type-equal=substitution', 'mutation_type-notequal=substitution', 'dlist-equal=none', 'dlist-notequal=none', 'kmer_overlap_in_mcrs_reference-isfalse', 'kmer_overlap_in_mcrs_reference-istrue', 'is_near_splice_junction_10-isfalse', 'is_near_splice_junction_10-istrue']\n",
     "\n",
     "random.shuffle(m_list)\n",
@@ -248,7 +205,6 @@
     "                    seed=seed,\n",
     "                    add_noise=add_noise,\n",
     "                    error_rate=error_rate,\n",
-    "                    error_distribution=error_distribution,\n",
     "                    max_errors=max_errors,\n",
     "                    with_replacement=False,\n",
     "                    filters=condition_added_list,\n",
@@ -261,10 +217,6 @@
     "                )\n",
     "\n",
     "                mutation_metadata_df, read_df = simulated_df_dict['mutation_metadata_df'], simulated_df_dict['read_df']\n",
-    "\n",
-    "    read_df.to_csv(read_df_out, index=False)\n",
-    "    mutation_metadata_df.to_csv(mutation_metadata_df_out, index=False)\n",
-    "\n",
     "else:\n",
     "    read_df = pd.read_csv(read_df_out)\n",
     "    mutation_metadata_df = pd.read_csv(mutation_metadata_df_out)"
@@ -279,20 +231,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# # do kv sim with random genome\n",
-    "mutation_metadata_df['start_position_for_which_read_contains_mutation_cdna'] = mutation_metadata_df['start_mutation_position_cdna'] - read_length + 1\n",
+    "# mutation_metadata_df['start_position_for_which_read_contains_mutation_cdna'] = mutation_metadata_df['start_mutation_position_cdna'] - read_length + 1\n",
     "# mutation_metadata_df['start_position_for_which_read_contains_mutation_genome'] = mutation_metadata_df['start_mutation_position_genome'] - read_length + 1\n",
     "\n",
-    "number_of_random_reads_cdna = 10000\n",
+    "# number_of_random_reads_cdna = 10\n",
     "# number_of_random_reads_genome = 10\n",
     "\n",
-    "read_df = build_random_genome_read_df(reference_fasta_file_path = sequences, mutation_metadata_df = mutation_metadata_df, read_df = read_df, n = number_of_random_reads_cdna, read_length = read_length, input_type = \"transcriptome\", strand = strand)\n",
-    "# read_df = build_random_genome_read_df(reference_fasta_file_path = reference_genome_fasta, mutation_metadata_df = mutation_metadata_df, read_df = read_df, n = number_of_random_reads_genome, read_length = read_length, input_type = \"genome\", strand = strand)\n",
-    "read_df.to_csv(read_df_out, index=False)"
+    "# # read_df = build_random_genome_read_df(reference_fasta_file_path = reference_cdna_fasta, mutation_metadata_df = mutation_metadata_df, read_df = read_df, n = number_of_random_reads_cdna, read_length = read_length, input_type = \"transcriptome\", strand = None)\n",
+    "# # read_df = build_random_genome_read_df(reference_fasta_file_path = reference_genome_fasta, mutation_metadata_df = mutation_metadata_df, read_df = read_df, n = number_of_random_reads_genome, read_length = read_length, input_type = \"genome\", strand = None)"
    ]
   },
   {
@@ -383,7 +334,6 @@
     "\n",
     "true_set_crude = set(read_df.loc[read_df['mutant_read'], 'read_header'])\n",
     "positive_set_crude = set(read_df.loc[read_df['aligned_somewhere'], 'read_header'])\n",
-    "# don't show mm here, because mm is counted as a TP for crude\n",
     "create_venn_diagram(true_set_crude, positive_set_crude, TN = metric_dictionary_reads_crude['TN'], mm = None, out_path = f\"{plot_output_folder}/venn_diagram_read_crude.png\")\n",
     "\n",
     "create_stratified_metric_bar_plot(read_df, 'mcrs_mutation_type', 'accuracy', overall_metric = metric_dictionary_reads_crude['accuracy'], log_x_axis = False, display_numbers = True, crude = True, out_path = f\"{plot_output_folder}/accuracy_vs_mcrs_mutation_type_read_perspective_crude.png\")"
@@ -609,39 +559,6 @@
    "metadata": {},
    "source": [
     "## Temporary detour: make sure bus_df and adata agree"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # # uncomment this cell if making adata comparisons after the notebook has concluded\n",
-    "# # read_df = pd.read_csv(read_df_out_updated)\n",
-    "# # unique_mcrs_df = pd.read_csv(unique_mcrs_df_out)\n",
-    "\n",
-    "# bus_df = pd.read_csv(\"/home/jrich/data/varseek_data_fresh/vk_sim_2024nov24_500000mcrs_k59_nov16/kb_count_out_mm/bus_df.csv\", usecols = [\"transcript_names_final\", \"counted_in_count_matrix\", \"count\"])\n",
-    "\n",
-    "# adata_path = f\"{kb_count_out}/counts_unfiltered/adata.h5ad\"\n",
-    "# adata = ad.read_h5ad(adata_path)\n",
-    "\n",
-    "# # Find the indices of non-zero values in adata.X\n",
-    "# non_zero_indices = np.nonzero(adata.X)\n",
-    "\n",
-    "# # Get the non-zero values\n",
-    "# non_zero_values = np.squeeze(np.asarray(adata.X[non_zero_indices])).astype(int)\n",
-    "\n",
-    "# # Get the corresponding gene names\n",
-    "# mcrs_ids = adata.var.index[non_zero_indices[1]].to_numpy().flatten()\n",
-    "\n",
-    "# mcrs_ids = mcrs_ids.astype(str)\n",
-    "\n",
-    "# # Create a DataFrame\n",
-    "# adata_df = pd.DataFrame({\n",
-    "#     'mcrs_id': mcrs_ids,\n",
-    "#     'number_of_reads_aligned_to_this_item': non_zero_values\n",
-    "# })"
    ]
   },
   {
@@ -946,7 +863,7 @@
    "source": [
     "# if 'bus_df' not in globals():\n",
     "#     from varseek.utils import make_bus_df\n",
-    "#     bus_df = make_bus_df(kallisto_out = kb_count_out_mm, fastq_file_list = synthetic_reads_fastQ, t2g_file = mutation_t2g, mm = True, union = False, assay = \"bulk\", bustools = \"/home/jrich/miniconda3/envs/varseek/lib/python3.10/site-packages/kb_python/bins/linux/bustools/bustools\")\n",
+    "#     bus_df = make_bus_df(kallisto_out = kb_count_out_mm, fastq_file = synthetic_reads_fastQ, t2g_file = mutation_t2g, mm = True, union = False, assay = \"bulk\", bustools = \"/home/jrich/miniconda3/envs/varseek/lib/python3.10/site-packages/kb_python/bins/linux/bustools/bustools\")\n",
     "#     bus_df.rename(columns={\"fastq_header\": \"read_id\"}, inplace=True)\n",
     "\n",
     "# # add some code here to check where these map\n",
@@ -990,5 +907,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
