--- a/notebooks/1_1_variant_detection_reference_building_t2t.ipynb
+++ b/notebooks/1_1_variant_detection_reference_building_t2t.ipynb
@@ -1,23 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "hello\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"hello\")"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -113,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,11 +124,15 @@
     "mutation_metadata_df_out_path_vk_info = os.path.join(out_dir_notebook, \"mutation_metadata_df_updated_vk_info.csv\")\n",
     "mutation_index = f\"{out_dir_notebook}/mutation_reference.idx\"\n",
     "dlist_fasta = f\"{out_dir_notebook}/dlist.fa\"\n",
+    "wt_mcrs_index = f\"{out_dir_notebook}/wt_mcrs_reference.idx\"\n",
+    "\n",
     "\n",
     "mcrs_fasta_vk_filter = os.path.join(out_dir_notebook, \"mcrs_filtered.fa\")\n",
     "output_metadata_df_vk_filter = os.path.join(out_dir_notebook, \"mutation_metadata_df_filtered.csv\")\n",
     "dlist_fasta_vk_filter = os.path.join(out_dir_notebook, \"dlist_filtered.fa\")\n",
+    "wt_mcrs_fa_vk_filter = os.path.join(out_dir_notebook, \"mcrs_wt_filtered.fa\")\n",
     "t2g_vk_filter = os.path.join(out_dir_notebook, \"t2g_filtered.txt\")\n",
+    "t2g_wt_vk_filter = os.path.join(out_dir_notebook, \"t2g_wt_filtered.txt\")\n",
     "id_to_header_csv_vk_filter = os.path.join(out_dir_notebook, \"id_to_header_mapping_filtered.csv\")\n",
     "\n",
     "if dlist:\n",
@@ -185,6 +172,7 @@
     "    cosmic_email = os.getenv('COSMIC_EMAIL'),\n",
     "    cosmic_password = os.getenv('COSMIC_PASSWORD'),\n",
     "    create_t2g=True,\n",
+    "    create_wt_mcrs_counterpart_fa=True,\n",
     "    update_df=True,\n",
     "    update_df_out=update_df_out,\n",
     "    verbose=verbose,\n",
@@ -256,8 +244,10 @@
     "          output_metadata_df=output_metadata_df_vk_filter,\n",
     "          dlist_fasta=dlist_fasta,\n",
     "          output_dlist_fasta=dlist_fasta_vk_filter,\n",
+    "          output_wt_mcrs_fa=wt_mcrs_fa_vk_filter,\n",
     "          create_t2g=True,\n",
     "          output_t2g=t2g_vk_filter,\n",
+    "          output_t2g_wt=t2g_wt_vk_filter,\n",
     "          id_to_header_csv=id_to_header_csv,\n",
     "          output_id_to_header_csv=id_to_header_csv_vk_filter,\n",
     "          verbose=True,\n",
@@ -281,6 +271,10 @@
     "# %%time\n",
     "if not os.path.exists(mutation_index):\n",
     "    kb_ref_command = [\"kb\", \"ref\", \"--workflow\", \"custom\", \"-t\", str(threads), \"-i\", mutation_index, \"--d-list\", dlist_kb_argument, \"-k\", str(k), mcrs_fasta_vk_filter]\n",
+    "    subprocess.run(kb_ref_command, check=True)\n",
+    "\n",
+    "if os.path.exists(wt_mcrs_fa_vk_filter) and not os.path.exists(mutation_index):\n",
+    "    kb_ref_command = [\"kb\", \"ref\", \"--workflow\", \"custom\", \"-t\", str(threads), \"-i\", wt_mcrs_index, \"--d-list\", dlist_kb_argument, \"-k\", str(k), wt_mcrs_fa_vk_filter]\n",
     "    subprocess.run(kb_ref_command, check=True)"
    ]
   },
